--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
        <img class="img-responsive logo" src="http://placekitten.com/100/100" alt="Jane Doette Logo">
        </div>
        <div class="col-sm-6">
-        <div class=""></div>
         <h1 class="text-right text-uppercase thin">Jane Doette</h1>
-        <h4 class="text-right text-uppercase">Front-End Ninja<h2>
+        <h4 class="text-right text-uppercase">Front-End Ninja</h4>
       </div>
     </header>
     <main>
     <hr>
       <div class="row">
-        <div class="col-md-12 banner">
-            <img class="img-responsive" src="http://placekitten.com/1000/600" alt="Large Cat Picture">
+        <div class="col-md-12">
+            <img class="img-responsive banner-img" src="http://placekitten.com/1000/600" alt="Large Cat Picture">
         </div>
       </div>
        <div class="row">
@@ -34,20 +33,29 @@
         </div>
       </div>  
       <div class="row">
-         <article class="col-sm-4 featured">
-          <img class="img-responsive" src="http://placekitten.com/300/200" alt="Appify">
+         <article class="col-sm-4">
+          <img class="img-responsive featured-img" src="http://placekitten.com/300/200" alt="Appify">
           <h3 class="text-center text-uppercase">Appify</h3>
-          <a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify</a>
+            <p>
+              <a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify
+              </a>
+            </p>
         </article> 
-        <article class="col-sm-4 featured">
-         <img class="img-responsive" src="http://placekitten.com/300/200" alt="Sunflower">
+        <article class="col-sm-4">
+         <img class="img-responsive featured-img" src="http://placekitten.com/300/200" alt="Sunflower">
           <h3 class="text-center text-uppercase">Sunflower</h3>
-          <a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower</a>
+          <p>
+            <a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower
+            </a>
+          </p>
         </article>
-        <article class="col-sm-4 featured">
-         <img class="img-responsive" src="http://placekitten.com/300/200" alt="Bokeh">
+        <article class="col-sm-4">
+         <img class="img-responsive featured-img" src="http://placekitten.com/300/200" alt="Bokeh">
          <h3 class="text-center text-uppercase">Bokeh</h3>
-         <a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/bokeh/</a>
+         <p>
+            <a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/bokeh/
+            </a>
+          </p>
         </article>
       </div>
     </main>
